# ac

./: .gitignore  CMakeLists.txt  README.md  makerun.sh
cmd/: make.cmd  make.sh
src/: CMakeLists.txt  main.c  main.h
