#-------------------------------------------------------------------------------
# NIch Ant Colony Project
# Copyright 2016 NIch(nich2000@mail.ru) All rights reserved
#
# File: CMakeLists.txt
#-------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.1)
#-------------------------------------------------------------------------------
project(nac C)
#-------------------------------------------------------------------------------
include_directories(./)
#-------------------------------------------------------------------------------
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
#-------------------------------------------------------------------------------
set(_PROG_H   ./main.h)
set(_PROG_C   ./main.c)
#-------------------------------------------------------------------------------
add_executable       (${PROJECT_NAME} ${_PROG_H} ${_PROG_C})
#-------------------------------------------------------------------------------
set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C C_STANDARD 99)
#-------------------------------------------------------------------------------
